RESOLVED FIXED245317
Crash in com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::AXObjectCache::isModalElement const
https://bugs.webkit.org/show_bug.cgi?id=245317
Summary Crash in com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::AXObjectC...
Andres Gonzalez
Reported 2022-09-17 10:33:21 PDT
8 WebCore::AXObjectCache::isModalElement(WebCore::Element&) const <== 8 WebCore::AXObjectCache::isModalElement(WebCore::Element&) const 8 WebCore::AXObjectCache::updateCurrentModalNode() 7 WebCore::AccessibilityObject::ignoredFromModalPresence() const | 4 WebCore::AXObjectCache::handleChildrenChanged(WebCore::AccessibilityObject&) | | 4 WebCore::AXObjectCache::performDeferredCacheUpdate() | | pruning: 2 WebCore::FrameView::performPostLayoutTasks() | | pruning: 2 WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() | 3 WebCore::AccessibilityObject::accessibilityIsIgnored() const | 3 WebCore::AXObjectCache::postTextStateChangeNotification(WebCore::Position const&, WebCore::AXTextStateChangeIntent const&, WebCore::VisibleSelection const&) | 3 WebCore::FrameSelection::notifyAccessibilityForSelectionChange(WebCore::AXTextStateChangeIntent const&) | 3 WebCore::FrameSelection::updateAndRevealSelection(WebCore::AXTextStateChangeIntent const&, WebCore::ScrollBehavior, WebCore::RevealExtentOption) | 3 WebCore::FrameSelection::updateAppearanceAfterLayout() | pruning: 2 WebCore::FrameView::performPostLayoutTasks() | pruning: 1 WebCore::Page::forEachDocumentFromMainFrame(WebCore::Frame const&, WTF::Function<void (WebCore::Document&)> const&) pruning: 1 WebCore::AXObjectCache::performDeferredCacheUpdate()
Attachments
Patch (6.87 KB, patch)
2022-09-17 11:11 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2022-09-17 10:33:31 PDT
Andres Gonzalez
Comment 2 2022-09-17 10:34:38 PDT
Radar WebKit Bug Importer
Comment 3 2022-09-17 10:34:50 PDT
Andres Gonzalez
Comment 4 2022-09-17 11:11:33 PDT
EWS
Comment 5 2022-09-18 06:15:18 PDT
Committed 254604@main (128a8bc221a8): <https://commits.webkit.org/254604@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 462420 [details].
Note You need to log in before you can comment on or make changes to this bug.