Cherry-pick 128a8bc221a8. rdar://problem/100071614

Crash in com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::AXObjectCache::isModalElement const)
    https://bugs.webkit.org/show_bug.cgi?id=245317
    rdar://99856492

    Reviewed by Chris Fleizach.

    AXObjectCache::updateCurrentModalNodeInternal was accessing a stale Element* in m_modalElements. The fix in this patch is to make m_modalElements a collection of WeakPtrs instead of raw pointers.

    * Source/WebCore/accessibility/AXObjectCache.cpp:
    (WebCore::AXObjectCache::findModalNodes):
    (WebCore::AXObjectCache::updateCurrentModalNodeInternal):
    (WebCore::AXObjectCache::remove):
    (WebCore::AXObjectCache::prepareForDocumentDestruction):
    (WebCore::AXObjectCache::performDeferredCacheUpdate):
    * Source/WebCore/accessibility/AXObjectCache.h:

    Canonical link: https://commits.webkit.org/254604@main

Canonical link: https://commits.webkit.org/252432.423@safari-7614-branch